--- a/main.css
+++ b/main.css
@@ -54,8 +54,8 @@ body {
   font-size: 1.8em;
 }
 #loginModal, #signUpModal {
-  top: 10%;
-  bottom: 10%; 
+  top: 5%;
+  bottom: 5%; 
 }
 #logoutButton {
   position: absolute;
@@ -63,6 +63,18 @@ body {
   right: 20px;
   color: white;
   cursor: pointer;
+}
+#scrollDownButton {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+
+  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+}
+#arrow {
+  font-size: 5em;
+  color: white;
 }
 
 .dark-field input[type=text], 
