--- a/main.css
+++ b/main.css
@@ -64,6 +64,13 @@ body {
   color: white;
   cursor: pointer;
 }
+#howToButton {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  color: white;
+  cursor: pointer;
+}
 #scrollDownButton {
   position: absolute;
   bottom: 0;
